src/components/Disclaimer.css
@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.disclaimer {
  position: fixed;
  width: 80vw;
  max-width: 30em;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  background: rgba(0, 0, 0, 0.8);
  backdrop-filter: blur(10px);
  justify-content: center;
  align-items: center;
  border-radius: 10px;
  border: 1px solid rgba(255, 255, 255, 0.18);
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
  font-size: 1.2rem;
  animation: fadeIn 0.5s ease-in-out;
  z-index: 500;
  padding: 2em;
  display: flex;
  flex-direction: column;
  gap: 24px;
}

.disclaimer .disclaimer-footer {
  flex-shrink: 1;
  display: flex;
  justify-content: end;
}

.disclaimer .warning {
  color: #ff563f;
  font-weight: 500;
  font-size: 2rem;
  margin-bottom: 0px;
}

